# retrieval-os

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.infra.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_plans.py  0003_usage_records.py  0004_deployments.py  0005_lineage.py  0006_eval_jobs.py  0007_cost_intelligence.py  0008_tenants.py  0009_webhooks.py  0010_ingestion.py  0011_project_index_config_split.py  0012_deployment_project_id.py  0013_rename_plan_name_to_project_name.py  0014_eval_dataset_uri_and_ingestion_dedup.py
docs/: api-reference.md  architecture.md  case-study.md  configuration.md  data-models.md  developer-guide.md  observability.md
infra/docker/: Dockerfile.api
infra/prometheus/: prometheus.yml
k8s/base/: deployment.yaml  hpa.yaml  kustomization.yaml  pdb.yaml  service.yaml
src/retrieval_os/: __init__.py
tests/: conftest.py
tests/benchmarks/: conftest.py  test_cost_efficiency.py  test_iteration_velocity.py  test_latency_predictability.py  test_operational_reliability.py  test_quality_stability.py
tests/e2e/: conftest.py  test_cache.py  test_concurrency.py  test_failure_modes.py
tests/integration/: conftest.py  test_eval_rollback_cycle.py  test_ingestion_flow.py  test_plan_deploy_flow.py  test_serving_flow.py  test_watchdog_rollback_flow.py
tests/load/: conftest.py  locustfile.py  test_cache_efficiency.py  test_deployment_lifecycle.py  test_embed_throughput.py  test_eval_rollback_workflow.py  test_http_throughput.py  test_ingestion_dedup.py  test_ingestion_serving_overlap.py  test_ingestion_throughput.py  test_metadata_filter_latency.py  test_multi_tenant_load.py  test_multimodal_throughput.py  test_query_latency.py  test_realistic_workload.py  test_sla_timeout.py  (+3 more)
(+104 files in other folders)
